// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": undefined,
      "id": "default",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.closable: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": false,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": undefined,
      "id": "properties.closable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.height: 500 placement: top - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": 500,
      "id": "properties.height: 500 placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.keyboard: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": undefined,
      "id": "properties.keyboard: false",
      "keyboard": false,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mask - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": undefined,
      "id": "properties.mask",
      "keyboard": undefined,
      "mask": false,
      "maskClosable": undefined,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.maskClosable: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": undefined,
      "id": "properties.maskClosable: false",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": false,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placement: bottom - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": undefined,
      "id": "properties.placement: bottom",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": "bottom",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placement: left - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": undefined,
      "id": "properties.placement: left",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": "left",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placement: top - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": undefined,
      "id": "properties.placement: top",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": "top",
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": undefined,
      "id": "properties.title",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": undefined,
      "title": "Drawer title",
      "visible": false,
      "width": undefined,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.width: 500 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": undefined,
      "id": "properties.width: 500",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": 500,
      "zIndex": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.zIndex: 1100 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": Object {},
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "closable": undefined,
      "drawerStyle": Object {},
      "getContainer": undefined,
      "headerStyle": Object {},
      "height": undefined,
      "id": "properties.zIndex: 1100",
      "keyboard": undefined,
      "mask": undefined,
      "maskClosable": undefined,
      "maskStyle": Object {},
      "onClose": [Function],
      "placement": undefined,
      "title": undefined,
      "visible": false,
      "width": undefined,
      "zIndex": 1100,
    },
    Object {},
  ],
]
`;
